# seashell-clang-js

./: .gitmodules  .travis.yml  BUILD.txt  CMakeLists.txt  README.md  clang-3.5-js+io.patch  compiler.cc  io.js  io.js.in  llvm-3.5-js.patch  package.json
compiler/: CMakeLists.txt  compiler-binding.h  compiler.cc
compiler/crt/: CMakeLists.txt  build-crt.js  compile-command
compiler/crt/libc/: Makefile.in  aclocal.m4  configure
compiler/crt/libc/include/: reent.h
compiler/crt/libc/include/sys/: unistd.h
compiler/crt/libc/reent/: reent.tex  sbrkr.c
compiler/crt/libc/signal/: signal.c
compiler/crt/libc/stdio/: setvbuf.c  vfiprintf.c  vfprintf.c
compiler/crt/libc/stdlib/: Makefile.am  Makefile.in  getenv.c  mallocr.c  setenv.c  setenv_r.c
compiler/crt/libm/: Makefile.in  aclocal.m4  configure
compiler/crt/platform/: _exit.c  close.c  crt0.c  fstat.c  gettimeofday.c  isatty.c  link.c  lseek.c  open.c  overrides.c  read.c  sbrk.c  seashell-runtime.h  stat.c  unimpl.c  unlink.c  write.c
interpreter/: CMakeLists.txt  runner.cc  runtime.cc  runtime.h  runtime.js  seashellinterpreter.cc  seashellinterpreter.h  seashellinterpreter_impl.cc  seashellinterpreter_impl.h
interpreter/Interpreter/: CMakeLists.txt
lib/: CMakeLists.txt  Dockerfile.in  README
lib/docker/: build.sh  compile-inside-docker.sh
lib/travis/: build.sh  compile-inside-docker.sh  deploy.sh
patch/: README  apply-patch  apply-patch-travis  clang-3.5-js.patch  clang-3.6-js.patch  clang-3.9-js.patch  clang-3.9-tblgen  llvm-3.5-js.patch  llvm-3.6-js.patch  llvm-3.9-js.patch  llvm-3.9-tblgen
tests/: CMakeLists.txt  diagnostic.js  test-abs.c  test-assert-failed.c  test-assert.c  test-control-flow.c  test-exit-failure.c  test-exit-success.c  test-float.c  test-forward.c  test-hello-world.js  test-input.c  test-io.c  test-memory.c  test-multiple-a.c  test-multiple-main.c  test-pointers.c  test-print-float.c  test-printf.c  test-rand.c  test-recursion.c  test-scope.c  test-sizeof.c  test-strings.c  test-struct.c  test-suspend.c  test-turnary.c  test.js  test1.c  test1.js  test2.c  test2.js  test3.js  test3.ll  test4.js  test5.c  test5.js  test6.js  test6.ll  test7.c  (+4 more)
